--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:OjHDAmH27gnFA+bb+06dDmDkoT/oUa2tSCYnJM6DEAc=
 APP_DEBUG=true
 APP_URL=http://localhost
 OLD_URL=https://pmfarma.es
