--- a/.env
+++ b/.env
@@ -29,14 +29,12 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 
-MAIL_MAILER=log
-MAIL_HOST=mailhog
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS="hello@example.com"
-MAIL_FROM_NAME="${APP_NAME}"
+MAIL_MAILER=smtp
+MAIL_HOST=sandbox.smtp.mailtrap.io
+MAIL_PORT=2525
+MAIL_USERNAME=eb0e5b63f94d71
+MAIL_PASSWORD=8253a433c9a25f
+MAIL_ENCRYPTION=tls
 
 
 # MAIL_MAILER=smtp
@@ -65,3 +63,6 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+
+URL_FRONT_LOGIN=http://127.0.0.1:9000/api/
